@@ -12,7 +12,7 @@ Doc: given a pseudo-matrix $(A,I)$, finds a
 
 Variant: Also available:
 
- \fun{GEN}{nfhnf}{GEN bnf, GEN x} ($\fl = 0$).
+ \fun{GEN}{nfhnf}{GEN nf, GEN x} ($\fl = 0$).
 
  \fun{GEN}{rnfsimplifybasis}{GEN bnf, GEN x} simplifies the pseudo-basis
  given by $x = (A,I)$. The ideals in the list $I$ are integral, primitive and
