@@ -1,12 +1,15 @@
 Function: nfsnf
 Section: number_fields
-C-Name: nfsnf
-Prototype: GG
-Help: nfsnf(nf,x): if x=[A,I,J], outputs [c_1,...c_n] Smith normal form of x.
-Doc: given a $\Z_K$-module $x$ associated to the integral pseudo-matrix
- $(A,I,J)$, returns an ideal list $d_1,\dots,d_n$ which is the \idx{Smith
- normal form} of $x$. In other words, $x$ is isomorphic to
- $\Z_K/d_1\oplus\cdots\oplus\Z_K/d_n$ and $d_i$ divides $d_{i-1}$ for $i\ge2$.
+C-Name: nfsnf0
+Prototype: GGD0,L,
+Help: nfsnf(nf,x,{flag=0}): if x=[A,I,J], outputs D=[d_1,...d_n] Smith normal
+ form of x. If flag is non-zero return [D,U,V], where UAV = Id.
+Doc: given a torsion $\Z_K$-module $x$ associated to the square integral
+ invertible pseudo-matrix $(A,I,J)$, returns an ideal list
+ $D=[d_1,\dots,d_n]$ which is the \idx{Smith normal form} of $x$. In other
+ words, $x$ is isomorphic to $\Z_K/d_1\oplus\cdots\oplus\Z_K/d_n$ and $d_i$
+ divides $d_{i-1}$ for $i\ge2$. If $\fl$ is non-zero return $[D,U,V]$, where
+ $UAV$ is the identity.
 
  See \secref{se:ZKmodules} for the definition of integral pseudo-matrix;
  briefly, it is input as a 3-component row vector $[A,I,J]$ where
@@ -21,3 +24,6 @@ Doc: given a $\Z_K$-module $x$ associated to the integral pseudo-matrix
  finitely generated torsion module is isomorphic to a module of this form and
  even with $b_i=Z_K$ for all $i$.
 
+Variant: Also available:
+
+ \fun{GEN}{nfsnf}{GEN nf, GEN x} ($\fl = 0$).
