@@ -1735,6 +1735,7 @@ GEN     nfmulmodpr(GEN nf, GEN x, GEN y, GEN modpr);
 GEN     nfpowmodpr(GEN nf, GEN x, GEN k, GEN modpr);
 GEN     nfreduce(GEN nf, GEN x, GEN ideal);
 GEN     nfsnf(GEN nf, GEN x);
+GEN     nfsnf0(GEN nf, GEN x, long flag);
 GEN     nfsolvemodpr(GEN nf, GEN a, GEN b, GEN modpr);
 GEN     to_famat(GEN x, GEN y);
 GEN     to_famat_shallow(GEN x, GEN y);
