@@ -76,6 +76,32 @@ Mod(z^2, z^3 + z^2 - 2*z - 1)
 
 [0 0 0 1]
 
+[[6017899359, 5241880500, 2055449334; 0, 87, 12; 0, 0, 3], [1, 0, 0; 0, 1, 0
+; 0, 0, 1], [1, 0, 0; 0, 1, 0; 0, 0, 1]]
+
+[1 [-8073, 4800, -5591]~ [-315011, 112392, -182676]~]
+
+[0                     1          [-87, -173, -155]~]
+
+[0                     0                           1]
+
+
+[[165073371/2005966453, -120336277/2005966453, -220005359/2005966453]~ [436,
+ -266, 285]~ 0]
+
+[[-36888191/2005966453, 61195737/2005966453, 56154718/2005966453]~ [-321, 17
+8, -216]~ [-4, -4, -5]~]
+
+[[-137636147/2005966453, 99618172/2005966453, 248701141/2005966453]~ [-20, 3
+7, 3]~ [7, 1, -3]~]
+
+
+[1 0 0]
+
+[0 1 0]
+
+[0 0 1]
+
 [[1, -1/2; 0, 1], [1, 1]]
 [Mod(1/6*y + 2/3, y^2 - 40), -3]
 [Mod(1/2*y + 4, y^2 - 40), 1]
@@ -772,4 +798,4 @@ error("inconsistent operation 'RgV_RgC_mul' t_VEC (3 elts) , t_COL (2 elts).
   ***   at top-level: rnfidealtwoelt(L,[[1
   ***                 ^--------------------
   *** rnfidealtwoelt: incorrect type in idealtyp [non-square t_MAT] (t_MAT).
-Total time spent: 332
+Total time spent: 356
