@@ -85,6 +85,7 @@ BA 60- ellcard over non-prime fields of large char could return wrong results
    64- contfracpnqn([a]) => [1,a;0,1] instead of [a,1;1,0]
    65- primes([2^50, 2^50+200000]) => stack overflow
    66- issquare((x+1/2)^2,&z); z => 1.0*x+0.5 instead of x+1/2
+   67- possibly wrong result in nfsnf
 
   Added
     1- add optional argument to sumdigits to specify the base
@@ -228,7 +229,7 @@ BA 25- setrand now return a (huge) integer instead of a vecsmall
        than previous at \p1000)
    35- elltors flags are now deprecated (and ignored, removed corresponding
        code)
-   36- add optional flag to nfhnf: return transformation matrix
+   36- add optional flag to nfhnf / nfsnf: return transformation matrices
 
 Removed
    1- deprecated functions nfbasis0, nfdisc0, factorpadic0
